--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/nodebotanist/BabbleBots/issues"
   },
-  "homepage": "https://github.com/nodebotanist/BabbleBots#readme"
+  "homepage": "https://github.com/nodebotanist/BabbleBots#readme",
+  "devDependencies": {
+    "jasmine": "^2.3.2"
+  }
 }
