HAHAHA it writes the template to the file

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "async": "^1.4.2",
     "chalk": "^1.1.1",
     "cli-spinner": "^0.2.1",
+    "ejs": "^2.3.4",
     "inquirer": "^0.10.1",
     "lodash": "^3.10.1",
     "spark": "^1.0.0"
