--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "chalk": "^1.1.1",
     "cli-spinner": "^0.2.1",
     "ejs": "^2.3.4",
+    "fs.extra": "^1.3.2",
     "inquirer": "^0.10.1",
     "lodash": "^3.10.1",
     "spark": "^1.0.0"
